--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,20 @@ body {
   gap: 16px;
 }
 
+
+*::-webkit-scrollbar-track {
+  background: #00003e;
+}
+
+*::-webkit-scrollbar {
+  width: 6px;
+}
+
+*::-webkit-scrollbar-button,
+*::-webkit-scrollbar-thumb {
+  background-color: #5732c6;
+}
+
 .recent-chat-content {
   display: -webkit-box;
   -webkit-line-clamp: 1;
