--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "react-device-frameset/styles/marvel-devices.min.css";
 
 :root {
   --foreground-rgb: 0, 0, 0;
